[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=5]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="glatiles_label" type="Label" parent="."]
margin_top = 96.0
margin_right = 1280.0
margin_bottom = 185.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "glatiles"
align = 1
valign = 1
autowrap = true

[node name="play_button" type="Button" parent="."]
margin_left = 552.0
margin_top = 296.0
margin_right = 728.0
margin_bottom = 368.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "play"

[node name="editor_button" type="Button" parent="."]
margin_left = 552.0
margin_top = 376.0
margin_right = 728.0
margin_bottom = 448.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "editor"

[node name="quit_button" type="Button" parent="."]
margin_left = 552.0
margin_top = 456.0
margin_right = 728.0
margin_bottom = 528.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "quit"

[node name="created_by_mante" type="Label" parent="."]
margin_left = 552.0
margin_top = 640.0
margin_right = 733.0
margin_bottom = 685.0
theme = ExtResource( 3 )
text = "v1.3
created by mantevian"
align = 1
valign = 1

[node name="itch_link" type="LinkButton" parent="created_by_mante"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 27.0
theme = ExtResource( 3 )
text = "check me out on itch"

[connection signal="tree_entered" from="." to="." method="_on_menu_tree_entered"]
[connection signal="button_up" from="play_button" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="editor_button" to="." method="_on_editor_button_button_up"]
[connection signal="button_up" from="quit_button" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="created_by_mante/itch_link" to="." method="_on_LinkButton_button_up"]
